--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                             &nbsp; &nbsp; &nbsp;During my bachelor, I studied and researched at Prof.Yiheng Lin's trapped ions group from 2019, 
                         involving both theoratical simulations and technical assignments. As for simulations, I implemented
                         <b>Qutip</b> on a lot of areas, including many-body systems as discrete time crystals
-                        , and geometric phase gates on trapped ions (<a href="GPS">Gate pulse shaping method</a> for Mølmer-Sørensen gate).
+                        , and geometric phase gates on trapped ions (<a href="#GPS">Gate pulse shaping method</a> for Mølmer-Sørensen gate).
                         Besides, I've accumulated sufficient experiences in lab skills, including <b>optics</b>, <b>control theory</b>,
                         <b>mechanical designing</b> and <b>electronic designing & engineering</b> in particular. I've designed and packaged
                         a <a href="#PSD">signal-processing circuit to visualize positions of light</a> by myself. When internship,
