--- a/index.html
+++ b/index.html
@@ -49,19 +49,27 @@
             </div>
 
             <div class="menu-item">
+                <a href="#Literature"> Literature </a>
+            </div>
+
+            <div class="menu-item">
                 <a href="#Gallery"> Gallery </a>
             </div>
 
             <div class="menu-category">
-                Scientific Blogs
+                Useful Links
             </div>
 
             <div class="menu-item">
-                2023
+                <a href="https://www.mcqst.de/"> MCQST </a>
             </div>
 
-            <div class="menu-category">
-                <a href="#Links"> Useful Links </a>
+            <div class="menu-item">
+                <a href="https://www.wmi.badw.de/home"> WMI-BADW </a>
+            </div>
+
+            <div class="menu-item">
+                <a href="https://arxiv.org/list/quant-ph/recent"> Arxiv </a>
             </div>
 
             </td>
@@ -85,7 +93,8 @@
                         <p>
                             I am currently a master student in Quantum Science & Technology program in <a href="https://www.tum.de/">Technical University of Munich</a>. 
                             At 2022, I obtained the Bachelor's Degree in Physics (Atomic and Molecular Physics) in 
-                            <a href="https://en.ustc.edu.cn/">University of Science and Technology of China</a>.
+                            <a href="https://en.ustc.edu.cn/">University of Science and Technology of China</a>, graduated from 
+                            <a href="http://en.scgy.ustc.edu.cn/">School of the Gifted Young</a>.
                             During the undergraduate education, I've been mainly involved in the quantum simulation and computation on <b>Trapped Ions</b>,
                             including Cs-VQE on water molecule and discrete time crystals. At 2021, I also did some projects on <b>Atom Chips</b> 
                             for internship at <a href="http://english.siom.cas.cn/">Shanghai Institute of Optics and Fine Mechanics</a>.
@@ -167,8 +176,8 @@
                         <p>
                             &nbsp; &nbsp; &nbsp;During my bachelor, I studied and researched at Prof.Yiheng Lin's trapped ions group from 2019, 
                         involving both theoratical simulations and technical assignments. As for simulations, I implemented
-                        <b>Qutip</b> on a lot of areas, including many-body systems as discrete time crystals
-                        , and geometric phase gates on trapped ions (<a href="#GPS">Gate pulse shaping method</a> for Mølmer-Sørensen gate).
+                        <b>Qutip</b> on a lot of areas, including many-body systems as discrete time crystals, 
+                        and geometric phase gates on trapped ions (<a href="#GPS">Gate pulse shaping method</a> for Mølmer-Sørensen gate).
                         Besides, I've accumulated sufficient experiences in lab skills, including <b>optics</b>, <b>control theory</b>,
                         <b>mechanical designing</b> and <b>electronic designing & engineering</b> in particular. I've designed and packaged
                         a <a href="#PSD">signal-processing circuit to visualize positions of light</a> by myself. When internship,
@@ -178,7 +187,7 @@
                             &nbsp; &nbsp; &nbsp;
                         As for bachelor's thesis, it's mainly about 
                         <a href="#csvqe">Contexual Subspace Variational Quantum Eigensolvers (Cs-VQE)</a> algorithm on trapped ions towards 
-                        estimation of ground state of water molecule. At 2022, I successfully graduated from USTC.
+                        estimation of ground state of water molecule. At June 2022, I successfully graduated from USTC.
                         </p>
                     </td>
                     <td>
@@ -419,20 +428,17 @@
             </table>
 
             <a name="Publications"><h2>Publications</h2></a>
-
+            
             <p>To be continued...</p>
 
+            <a name="Literature"><h2>Literature</h2></a>
+
+            <p>To be added...</p>
+            
             <a name="Gallery"><h2>Gallery</h2></a>
 
             <p>To be added...</p>
 
-            <a name="Links"><h2>Useful Links</h2></a>
-
-            <a href="https://www.mcqst.de/">Munich Center for Quantum Science and Technology</a>
-            <br>
-            <a href="https://www.wmi.badw.de/home">Walther Meissner Institut</a>
-            <br>
-            <a href="https://arxiv.org/list/quant-ph/recent">Arxiv:Quantum Physcis(Recent)</a>
         </tr>
         </table>        
     </body>
