--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
                             <br>
                             <a href="https://www.tum.de/">Technical University of Munich</a>,
                             <br>
-                            E-mail: longxiang.huang@tum.de 
+                            E-mail:longxiang.huang@tum.de
+                            <br>
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            Longxiang.Huang@wmi.badw.de 
                         </p>
                     </td>
                 </tr>
